<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:orientation="vertical" >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTitle"
        android:hint="@string/title"
        android:textStyle="bold"
        android:singleLine="true"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/editIsi"
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:layout_marginTop="20dp"
        android:hint="@string/isiTodo"
        android:inputType="textMultiLine|textFilter" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/judulTanggalTempo"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:text="@string/waktutempo"
        android:textAlignment="center"
        android:textSize="20sp"
        android:id="@+id/waktu_tempo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="2dp"
        android:text="@string/tanggaltempo"
        android:textAlignment="center"
        android:textSize="20sp"
        android:id="@+id/tanggal_tempo"/>

</LinearLayout>