<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="13dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/holo_orange_light">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/time_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_toRightOf="@id/time_created"
                    android:padding="7dp"
                    android:textStyle="bold"
                    android:text="@string/judulUpdate"
                    android:textSize="12sp"
                    android:fontFamily="@font/selawksb"/>

                <TextView
                    android:id="@+id/time_created"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:text="@string/judulBuat"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:fontFamily="@font/selawksb"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/view_waktu_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:fontFamily="@font/selawk"
                    android:layout_toRightOf="@id/view_waktu_dibuat"
                    android:paddingRight="7dp"
                    android:text="@string/waktuupdate"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/view_waktu_dibuat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="7dp"
                    android:paddingBottom="4dp"
                    android:fontFamily="@font/selawk"
                    android:text="@string/waktudibuat"
                    android:textSize="13sp" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="4dp"
                android:background="#000000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/title_todo"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:fontFamily="@font/selawkb"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/isi_todo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:text="@string/isinya"
                android:fontFamily="@font/selawk"
                android:textColor="@android:color/black"/>
            <View
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="4dp"
                android:background="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="13dp"
                android:textColor="@android:color/black"
                android:text="@string/batas"
                android:fontFamily="@font/selawksb"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/view_jatuh_tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="21dp"
                android:fontFamily="@font/selawk"
                android:textColor="@android:color/black"
                android:text="@string/tanggaldanwaktu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:id="@+id/view_jatuh_waktu"
                android:fontFamily="@font/selawk"
                android:paddingLeft="21dp"/>

            <ImageView
                android:id="@+id/delete_button"
                android:layout_width="43dp"
                android:layout_height="34dp"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_delete_black_24dp" />
        </LinearLayout>
</RelativeLayout>